@@ -253,6 +253,7 @@ export(mergeMethods)
 export(metaNameUndo)
 export(methodSignatureMatrix)
 export(methodsPackageMetaName)
+export(method.skeleton)
 export(missingArg)
 export(mlistMetaName)
 export(new)
