@@ -400,6 +400,10 @@ NEW FEATURES
 	"letter"), "a4r" and "USr" (the latter two meaning rotated to
 	landscape).  postscript() also accepts paper = "US".
 
+    o	A new function, method.skeleton() writes a skeleton version of
+        a call to setMethod() to a file, with correct arguments and
+        format, given the name of the function and the method signature.
+
     o	Added is.raw() for completeness.
 
     o	union(), interect(), setdiff() and setequal() now coerce their
